<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/incall_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/call_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/incall_info_margintop"
        android:layout_marginLeft="@dimen/incall_info_marginleft"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/incall_font_size" />
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/number"
            android:layout_alignBaseline="@id/number"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:textColor="#000000"
            android:textSize="@dimen/incall_timer_font_size" />
    </RelativeLayout>

    <TextView
        android:id="@+id/call_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="@dimen/incall_info_marginleft"
        android:textSize="@dimen/incall_status_font_size" />

    <View android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/answer_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/incall_btn_margintop"
        android:layout_marginBottom="0dp" >

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept_call"
            android:background="@color/incall_answer_button_bg" />

        <Button
            android:id="@+id/btn_reject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reject_call"
            android:layout_marginLeft="@dimen/incall_btn_distance"
            android:background="@color/incall_reject_button_bg" />

        <Button
            android:id="@+id/btn_ignore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ignore_call"
            android:layout_marginLeft="@dimen/incall_btn_distance"
            android:background="@color/incall_reject_button_bg" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_endcall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/incall_btn_margintop"
        android:layout_marginBottom="0dp"
        android:text="@string/end_call"
        android:background="@color/incall_reject_button_bg"
        android:visibility="gone" />

</LinearLayout>